--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -9,7 +9,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/springtest?serverTimezone=UTC&
 #mybatis
 # mybatis 매핑 type을 짧게 쓰기 위한 설정 
 # mapper.xml에서 resultType을 지정할 때 com.god.bo.test.vo.TestVo 대신 TestVo로 간략히 할 수 있다. 
-mybatis.type-aliases-package=com.example.demo.vo
+mybatis.type-aliases-package=com.example.demo.vo,com.example.demo.domain
+
 # mapper.xml 위치 지정 
 # **은 하위 폴더 레벨에 상관없이 모든 경로를 뜻하며, *는 아무 이름이나 와도 된다는것을 뜻합니다. 
 mybatis.mapper-locations=mybatis/**/*.xml
